TextFields into TextAreas, vollständig

--- a/src/main/java/View/Lösungen/BewertungenTestat/BewertungEinfachantwortView.form
+++ b/src/main/java/View/Lösungen/BewertungenTestat/BewertungEinfachantwortView.form
@@ -23,9 +23,9 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="b7bce" class="javax.swing.JTextField" binding="txtfUserLoesung">
+      <component id="9e27e" class="javax.swing.JTextArea" binding="txtaUserLoesung">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
           </grid>
         </constraints>
@@ -33,9 +33,9 @@
           <editable value="false"/>
         </properties>
       </component>
-      <component id="bc3d0" class="javax.swing.JTextField" binding="txtfMusterloesung">
+      <component id="b78f9" class="javax.swing.JTextArea" binding="txtaMusterloesung">
         <constraints>
-          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
           </grid>
         </constraints>
@@ -100,7 +100,7 @@
           <grid row="5" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="99128" class="javax.swing.JTextField" binding="txtfAufgabentext">
+      <component id="d986a" class="javax.swing.JTextArea" binding="txtaAufgabentext">
         <constraints>
           <grid row="1" column="1" row-span="3" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="120"/>
