--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingProgrammieraufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingProgrammieraufgabeView.form
@@ -46,9 +46,9 @@
           <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="dd236" class="javax.swing.JTextField" binding="txtfUserLoesung">
+      <component id="688d6" class="javax.swing.JTextArea" binding="txtaUserLoesung">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
             <preferred-size width="200" height="250"/>
           </grid>
@@ -57,9 +57,9 @@
           <editable value="false"/>
         </properties>
       </component>
-      <component id="561c4" class="javax.swing.JTextField" binding="txtfMusterloesung">
+      <component id="7e196" class="javax.swing.JTextArea" binding="txtaMusterloesung">
         <constraints>
-          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
             <preferred-size width="200" height="250"/>
           </grid>
@@ -97,7 +97,7 @@
           <text value="Nächste Aufgabe"/>
         </properties>
       </component>
-      <component id="5fb09" class="javax.swing.JTextField" binding="txtfAufgabentext">
+      <component id="197a3" class="javax.swing.JTextArea" binding="txtaAufgabentext">
         <constraints>
           <grid row="1" column="1" row-span="2" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="120"/>
@@ -140,7 +140,7 @@
           </component>
           <component id="9f035" class="javax.swing.JLabel" binding="lblMaximalPunktzahl">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="10"/>
