--- a/src/main/java/View/Lösungen/BewertungenTestat/BewertungDesignaufgabeView.form
+++ b/src/main/java/View/Lösungen/BewertungenTestat/BewertungDesignaufgabeView.form
@@ -36,7 +36,7 @@
       </component>
       <component id="15279" class="javax.swing.JLabel" binding="lblUserloesung">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -80,22 +80,9 @@
           <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="d364" class="javax.swing.JTextField" binding="txtfAufgabentext">
-        <constraints>
-          <grid row="1" column="1" row-span="3" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="150" height="120"/>
-            <preferred-size width="150" height="120"/>
-          </grid>
-        </constraints>
-        <properties>
-          <editable value="false"/>
-          <text value=""/>
-          <toolTipText value="Aufgabentext"/>
-        </properties>
-      </component>
       <component id="4b000" class="javax.swing.JLabel" binding="lblAufgabenstellungsbild">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -209,7 +196,7 @@
       </component>
       <component id="346c4" class="javax.swing.JLabel" binding="lblMusterloesung">
         <constraints>
-          <grid row="5" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -224,6 +211,19 @@
         <properties>
           <text value="Bewertung speichern"/>
           <visible value="false"/>
+        </properties>
+      </component>
+      <component id="36c9c" class="javax.swing.JTextArea" binding="txtaAufgabentext">
+        <constraints>
+          <grid row="1" column="1" row-span="3" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="150" height="120"/>
+            <preferred-size width="150" height="120"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+          <toolTipText value="Aufgabentext"/>
+          <visible value="true"/>
         </properties>
       </component>
     </children>
