--- a/src/main/java/View/Lösungen/BewertungenTestat/BewertungProgrammieraufgabeView.form
+++ b/src/main/java/View/Lösungen/BewertungenTestat/BewertungProgrammieraufgabeView.form
@@ -18,9 +18,9 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="ef7dc" class="javax.swing.JTextField" binding="txtfUserLoesung">
+      <component id="78e55" class="javax.swing.JTextArea" binding="txtaUserLoesung">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
           </grid>
         </constraints>
@@ -28,9 +28,9 @@
           <editable value="false"/>
         </properties>
       </component>
-      <component id="e6dee" class="javax.swing.JTextField" binding="txtfMusterloesung">
+      <component id="a601b" class="javax.swing.JTextArea" binding="txtaMusterloesung">
         <constraints>
-          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="150"/>
           </grid>
         </constraints>
@@ -95,7 +95,7 @@
           <text value="Nächste Aufgabe"/>
         </properties>
       </component>
-      <component id="309d4" class="javax.swing.JTextField" binding="txtfAufgabentext">
+      <component id="7655f" class="javax.swing.JTextArea" binding="txtaAufgabentext">
         <constraints>
           <grid row="1" column="1" row-span="3" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="120"/>
