--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingDesignaufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingDesignaufgabeView.form
@@ -69,7 +69,7 @@
       </component>
       <component id="3c2d9" class="javax.swing.JLabel" binding="lblAufgabenstellungsbild">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -77,7 +77,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="7abe3" class="javax.swing.JTextField" binding="txtfAufgabentext">
+      <component id="d7d5" class="javax.swing.JTextArea" binding="txtaAufgabentext">
         <constraints>
           <grid row="1" column="1" row-span="2" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="120"/>
@@ -91,7 +91,7 @@
       </component>
       <component id="dc328" class="javax.swing.JLabel" binding="lblUserloesung">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -135,7 +135,7 @@
           </component>
           <component id="215e1" class="javax.swing.JLabel" binding="lblMaximalPunktzahl">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="10"/>
