--- a/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingMultipleChoiceAufgabeView.form
+++ b/src/main/java/View/Lösungen/LoesungenTraining/LoesungTrainingMultipleChoiceAufgabeView.form
@@ -167,7 +167,7 @@
           </component>
         </children>
       </grid>
-      <component id="50d47" class="javax.swing.JTextField" binding="txtfAufgabentext">
+      <component id="5ac92" class="javax.swing.JTextArea" binding="txtaAufgabentext">
         <constraints>
           <grid row="1" column="1" row-span="2" col-span="3" vsize-policy="6" hsize-policy="7" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="120"/>
@@ -210,7 +210,7 @@
           </component>
           <component id="b871d" class="javax.swing.JLabel" binding="lblMaximalPunktzahl">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="10"/>
