--- a/src/main/java/view/aufgabenBearbeiten/aufgabenSammlungenBearbeiten/BearbeiteDesignaufgabeView.form
+++ b/src/main/java/view/aufgabenBearbeiten/aufgabenSammlungenBearbeiten/BearbeiteDesignaufgabeView.form
@@ -18,9 +18,8 @@
         <children>
           <component id="2e498" class="javax.swing.JLabel" binding="lblBild">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="250" height="150"/>
-                <preferred-size width="250" height="150"/>
               </grid>
             </constraints>
             <properties>
@@ -238,10 +237,10 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="b2d11" class="javax.swing.JLabel" binding="lblAufgabenText">
+              <component id="fb7b5" class="javax.swing.JTextArea" binding="txtaAufgabentext">
                 <constraints/>
                 <properties>
-                  <text value="Label"/>
+                  <editable value="false"/>
                 </properties>
               </component>
             </children>
