--- a/src/main/java/view/aufgabenBearbeiten/einzelAufgaben/BearbeiteEinzelneMultipleChoiceAufgabeView.form
+++ b/src/main/java/view/aufgabenBearbeiten/einzelAufgaben/BearbeiteEinzelneMultipleChoiceAufgabeView.form
@@ -16,17 +16,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="37d88" class="javax.swing.JLabel" binding="lblBild">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="150"/>
-                <preferred-size width="250" height="150"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
           <grid id="5b56" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -256,14 +245,24 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="566c9" class="javax.swing.JLabel" binding="lblAufgabenText">
+              <component id="a00c" class="javax.swing.JTextArea" binding="txtaAufgabentext">
                 <constraints/>
                 <properties>
-                  <text value="Aufgabentext"/>
+                  <editable value="false"/>
                 </properties>
               </component>
             </children>
           </scrollpane>
+          <component id="37d88" class="javax.swing.JLabel" binding="lblBild">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="200" height="200"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
