--- a/src/main/java/view/AufgabenPreview.form
+++ b/src/main/java/view/AufgabenPreview.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="286a6" class="javax.swing.JTextField" binding="txtfAufgabenstellung">
+      <component id="315a6" class="javax.swing.JTextArea" binding="txtaAufgabenstellung">
         <constraints>
           <grid row="1" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="150" height="200"/>
@@ -23,7 +23,6 @@
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="200"/>
-            <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
         <properties>
